--- a/math/index.html
+++ b/math/index.html
@@ -1,8 +1,47 @@
+<!doctype html>
 <html>
 	<head>
 		<title>Simple Add/Subtract Example</title>
+		<meta name="description" content="a demo page inexplicably using comic sans" />
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+		<style>
+			body { margin: 0; font-family:'Comic Sans','Comic Sans MS'; text-align: center; background-color: #efefef; }
+				h1 { margin-top:50px; }
+		</style>
 	</head>
 	<body>
-		GH-PAGES TEST
+		<h1>Adder/Subtractor</h1>
+		
+		<label>X =</label>
+		<input id="X" type="number" placeholder="Enter an integer"><br />
+		<label>Y =</label>
+		<input id="Y" type="number" placeholder="Enter an integer"><br />
+
+		<button rel="minus">-</button>
+		<button rel="plus">+</button>
+
+		<h2></h2>
+		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+		<script>
+			$(document).ready(function() {
+				
+				$('button').click(function(){
+					var x = parseInt($('input#X').val()) || 'error',
+						y = parseInt($('input#Y').val()) || 'error',
+						method = $(this).attr('rel'),
+						total, result;
+
+					if(x=='error' || y == 'error') result = 'Your inputs are wrong.';
+					else {
+						if(method=="minus") total = x - y;
+						else total = x + y;
+						result = x + " " + method + " " + y + " is " + total;
+					}
+
+					$('h2').html(result);
+
+				});
+			});
+		</script>
 	</body>
 </html>
