--- a/mad-lib/index.html
+++ b/mad-lib/index.html
@@ -3,41 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Mad Lib</title>
-
-    <style>
-        * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; }
-        body { font:normal 16px 'Garamond'; margin: 20px; background-color: #ddd; }
-            .wrapper { width: 100%; max-width:800px; margin: 0 auto; display: none; padding: 20px; background-color: #fff; box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3); }
-            .form { width: 100%; }
-                input { display:inline-block; width:49%; height:30px; line-height:30px; border:1px solid #ccc; padding: 0 4px; margin:2px 0; }
-            img { display: block; margin: 0 auto; max-width:100%; }
-                .face { position: fixed; bottom: -150px; left: 50%; margin-left: -100px; -webkit-transition: all 6s 2s linear; -moz-transition: all 6s 2s linear; -o-transition: all 6s 2s linear; -ms-transition: all 6s 2s linear; transition: all 6s 2s linear; }
-            p { line-height:24px;}
-
-    </style>
-
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="base.css">
+    <script src="../js/libs/jquery.js"></script>
+    <script src="../js/libs/angular.js"></script>
     <script src="sanitize.js" type="text/javascript"></script>
 </head>
 <body>
-    <div ng-controller="wrapper" class="wrapper">
+    <div class="wrapper">
         <img src="logo.png">
-        <div class="form">
-            <input type="text" ng-model="data.century" placeholder="Number">
-            <input type="text" ng-model="data.adj1" placeholder="Adjective">
-            <input type="text" ng-model="data.adj2" placeholder="Adjective">
-            <input type="text" ng-model="data.location" placeholder="Business Type">
-            <input type="text" ng-model="data.name" placeholder="Name">
-            <input type="text" ng-model="data.verb" placeholder="Verb">
-            <input type="text" ng-model="data.occupation" placeholder="Occupation">
-            <input type="text" ng-model="data.university" placeholder="University">
-            <input type="text" ng-model="data.verb2" placeholder="Verb">
-            <input type="text" ng-model="data.adj3" placeholder="Adjective">
+        <div ng-if="formView">
+            <form ng-submit="submitted=true; submit();" ng-controller="form" name="madfields" novalidate>
+                <input type="number" ng-model="data.century" placeholder="Number" ng-class="{red:madfields.century.$invalid && submitted}" name="century" required>
+                <input type="text" ng-model="data.adj1" placeholder="Adjective" ng-class="{red:madfields.adj.$invalid && submitted}" name="adj" required>
+                <input type="text" ng-model="data.adj2" placeholder="Adjective" ng-class="{red:madfields.adj2.$invalid && submitted}" name="adj2" required>
+                <input type="text" ng-model="data.location" placeholder="Business Type" ng-class="{red:madfields.location.$invalid && submitted}" name="location" required>
+                <input type="text" ng-model="data.name" placeholder="Name" ng-class="{red:madfields.name.$invalid && submitted}" name="name" required>
+                <input type="text" ng-model="data.verb" placeholder="Verb" ng-class="{red:madfields.verb.$invalid && submitted}" name="verb" required>
+                <input type="text" ng-model="data.occupation" placeholder="Occupation" ng-class="{red:madfields.occupation.$invalid && submitted}" name="occupation" required>
+                <input type="text" ng-model="data.university" placeholder="University" ng-class="{red:madfields.university.$invalid && submitted}" name="university" required>
+                <input type="text" ng-model="data.verb2" placeholder="Verb" ng-class="{red:madfields.verb2.$invalid && submitted}" name="verb2" required>
+                <input type="text" ng-model="data.adj3" placeholder="Adjective" ng-class="{red:madfields.adj3.$invalid && submitted}" name="adj3" required>
+                <input type="submit">
+            </form>
         </div>
-    	<div class="text">
-    		<p>In the last years of the <span ng-bind-html='data.century || "17th" | wrap'></span> Century there was to be found among the {{data.adj1 || 'fops'}} and {{data.adj2 || 'fools'}} of the London {{data.location || 'coffee-houses'}} one rangy, gangling flitch called {{data.name || 'Ebenezer Cooke' | titlecase}}, more ambitious than talented, and yet more talented than prudent, who, like his friends-in-folly, all of whom were supposed to be {{data.verb || 'educating'}} at Oxford or {{data.university || 'Cambridge'}}, had found the sound of Mother English more fun to game with than her sense to labor over, and so rather than applying himself to the pains of {{data.occupation || 'scholarship'}}, had learned the knack of {{data.verb2 || 'versifying'}}, and ground out quires of couplets after the fashion of the day, {{data.adj3 || 'afroth'}} with Joves and Jupiters, aclang with jarring rhymes, and string-taut with similes stretched to the snapping-point.</p>
-            <p>- John Barth</p>
+    	<div class="text" ng-controller="result">
+            <div ng-if="!formView">
+        		<p>In the last years of the <span ng-bind-html='results.century || "17th" | wrap'></span> Century there was to be found among the <b>{{results.adj1 || 'fops'}}</b> and <b>{{results.adj2 || 'fools'}}</b> of the London <b>{{results.location || 'coffee-houses'}}</b> one rangy, gangling flitch called <b>{{results.name || 'Ebenezer Cooke' | titlecase}}</b>, more ambitious than talented, and yet more talented than prudent, who, like his friends-in-folly, all of whom were supposed to be <b>{{results.verb || 'educating'}}</b> at Oxford or <b>{{results.university || 'Cambridge'}}</b>, had found the sound of Mother English more fun to game with than her sense to labor over, and so rather than applying himself to the pains of <b>{{results.occupation || 'scholarship'}}</b>, had learned the knack of <b>{{results.verb2 || 'versifying'}}</b>, and ground out quires of couplets after the fashion of the day, <b>{{results.adj3 || 'afroth'}}</b> with Joves and Jupiters, aclang with jarring rhymes, and string-taut with similes stretched to the snapping-point.</p>
+                <p>- John Barth</p>
+                <button ng-click="toggleForm()">Start Over</button>
+            </div>
     	</div>
     </div>
     <img src="face.png" class="face">
