--- a/mad-lib/index.html
+++ b/mad-lib/index.html
@@ -10,15 +10,28 @@
     <script src="../js/libs/angular.js"></script>
     
     <script src="bower_components/requirejs/require.js"></script>
-    <script> require.config({baseUrl: 'bower_components'}); </script>
-    <script src="bower_components/famous-angular/dist/famous-angular.js"></script>
 
     <script src="../js/sanitize.js" type="text/javascript"></script>
     <script src="../js/angular-animate.js" type="text/javascript"></script>
+
+    <!-- shims for backwards compatibility -->
+    <script type="text/javascript" src="http://code.famo.us/lib/functionPrototypeBind.js"></script>
+    <script type="text/javascript" src="http://code.famo.us/lib/classList.js"></script>
+    <script type="text/javascript" src="http://code.famo.us/lib/requestAnimationFrame.js"></script>
+
+    <!-- module loader -->
+    <script type="text/javascript" src="http://code.famo.us/lib/require.js"></script>
+
+    <!-- famous -->
+    <link rel="stylesheet" type="text/css" href="http://code.famo.us/famous/0.2/famous.css" />
+    <script type="text/javascript" src="http://code.famo.us/famous/0.2/famous.min.js"></script>
+
+    <!-- app code -->
+    <script type="text/javascript"> require(['famous']); </script>
 </head>
 <body>
     <div class="wrapper" ng-init="formView=true">
-        <img src="logo.png">
+        <div id="logo"></div>
         <div class="slidewrap">
             <div ng-if="formView" class="form-view">
                 <form ng-submit="submitted=true; submit();" ng-controller="form" name="madfields" novalidate>
